--- a/.github/workflows/main_yugioh-statistics.yml
+++ b/.github/workflows/main_yugioh-statistics.yml
@@ -10,6 +10,11 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  db_user: ${{ secrets.DB_USER }}
+  db_password: ${{ secrets.DB_PASSWORD }}
+  
+
 jobs:
   build:
     runs-on: ubuntu-latest
