--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-django == 4.1
-whitenoise
-psycopg2-binary
-django-crispy-forms
-crispy-bootstrap5
-psycopg2-binary
+# Since we currently still supports Python 3.7, we choose Django version accordingly.
+# See https://docs.djangoproject.com/en/5.0/faq/install/#what-python-version-can-i-use-with-django
+django>=3.2,<6
+
+identity>=0.5,<0.6
+python-dotenv<0.22
+requests>=2,<3
